# ThirdParty

./: CompressAll.bat  DecompressAll.bat  OpenTwin Changes.txt  SetupEnvironment.bat
Pyrit/Distribution/: MANIFEST.in  README.md  pyproject.toml  result.vtu  setup.cfg  simulation_example.py
Pyrit/Distribution/source/pyrit/: Logger.py  __init__.py
Pyrit/Distribution/source/pyrit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Pyrit/Distribution/source/pyrit/bdrycond/: BCAntiPeriodic.py  BCBinary.py  BCDirichlet.py  BCNeumann.py  BCPeriodic.py  BCSolidConductor.py  BdryCond.py
Pyrit/Distribution/source/pyrit/excitation/: ChargeDensity.py  Excitations.py
Pyrit/Distribution/source/pyrit/geometry/: EllipseArc.py  Geo.py  Point.py
Pyrit/Distribution/source/pyrit/material/: BrauerModel.py  DifferentialConductivity.py  DifferentialReluctivity.py  Mat.py  Materials.py  Permeability.py  Reluctivity.py  Resistivity.py  ThermalConductivity.py
Pyrit/Distribution/source/pyrit/mesh/: AxiMesh.py  __init__.py
Pyrit/Distribution/source/pyrit/problem/: CurrentFlowProblemAxi.py  CurrentFlowProblemCart.py  ElectricProblemAxi.py  ElectricProblemCart.py  ElectrothermalProblemAxi.py  FieldCircuitCouplingProblem.py  MagneticProblemAxi.py  ThermalProblemCart.py
Pyrit/Distribution/source/pyrit/shapefunction/__pycache__/: TriCartesianEdgeShapeFunction.calc_curl-770.py39.1.nbc  TriCartesianEdgeShapeFunction.calc_curl-770.py39.nbi  TriCartesianEdgeShapeFunction.calc_curlcurl_scalar_per_elem-227.py39.1.nbc  TriCartesianEdgeShapeFunction.calc_curlcurl_scalar_per_elem-227.py39.nbi  TriCartesianEdgeShapeFunction.calc_load_constant-530.py39.1.nbc  TriCartesianEdgeShapeFunction.calc_load_constant-530.py39.nbi
Pyrit/Distribution/source/pyrit/solution/: CurrentFlowSolutionAxi.py  FieldCircuitCouplingSolution.py  Solution.py  ThermalSolutionCart.py
Pyrit/Distribution/source/pyrit/toolbox/: ImportGmshToolbox.py  MiscellaneousToolbox.py  NumbaToolbox.py  PostprocessToolbox.py  TimeIntegrationToolbox.py
Pyrit/Distribution/source/pyrit/toolbox/CircuitSimulationToolbox/: Circuit.py  __init__.py
Pyrit/Distribution/source/pyrit/toolbox/geolibrary/: FoilWindingWithSurrounding.py
Pyrit/Distribution/source/pyrit/toolbox/schemes/: combine_json_files.py  dunavant_all.json  jaskowiec_sukumar_all.json  write_json.m
Qt/6.10.0/Src/qtactiveqt/tests/auto/: CMakeLists.txt
Qt/6.10.0/Src/qtbase/src/platformsupport/: CMakeLists.txt
Qt/6.10.0/Src/qtconnectivity/: .cmake.conf  .gitreview  .tag  CMakeLists.txt  REUSE.toml  configure.cmake  dependencies.yaml  licenseRule.json  qt_cmdline.cmake
Qt/6.10.0/Src/qtconnectivity/src/: CMakeLists.txt
Qt/6.10.0/Src/qtconnectivity/src/bluetooth/: CMakeLists.txt  configure.cmake  lecmaccalculator.cpp  qbluetoothdevicediscoveryagent.cpp  qbluetoothdevicediscoveryagent_bluez.cpp  qbluetoothdevicediscoveryagent_p.h  qbluetoothdevicediscoveryagent_winrt.cpp  qbluetoothlocaldevice_bluez.cpp  qbluetoothlocaldevice_p.h  qbluetoothservicediscoveryagent.cpp  qbluetoothservicediscoveryagent_bluez.cpp  qbluetoothservicediscoveryagent_p.h  qbluetoothservicediscoveryagent_winrt.cpp  qbluetoothserviceinfo.cpp  qbluetoothserviceinfo_bluez.cpp  qbluetoothserviceinfo_p.h  qbluetoothsocket.cpp  qbluetoothsocket_android.cpp  qbluetoothsocket_bluez.cpp  qbluetoothsocket_bluezdbus.cpp  qbluetoothsocket_bluezdbus_p.h  qbluetoothsocket_macos.mm  qbluetoothsocket_winrt.cpp  qbluetoothsocket_winrt_p.h  qleadvertiser_bluez.cpp  qleadvertiser_bluezdbus.cpp  qleadvertiser_bluezdbus_p.h  qlowenergyadvertisingdata.cpp  qlowenergycontroller_android.cpp  qlowenergycontroller_bluez.cpp  qlowenergycontroller_bluezdbus.cpp  qlowenergycontroller_bluezdbus_p.h  qlowenergycontroller_darwin.mm  qlowenergycontroller_winrt.cpp
Qt/6.10.0/Src/qtconnectivity/src/global/: CMakeLists.txt
Qt/6.10.0/Src/qtconnectivity/src/nfc/: CMakeLists.txt  configure.cmake  qapduutils.cpp  qndeffilter.cpp  qndefmessage.cpp  qndefnfcsmartposterrecord.cpp  qnearfieldmanager_ios.mm  qnearfieldmanager_ios_p.h  qnearfieldmanager_neard.cpp  qnearfieldmanager_neard_p.h  qnearfieldtarget.cpp  qnearfieldtarget_android.cpp  qnearfieldtarget_ios.mm  qnearfieldtarget_ios_p.h  qnearfieldtarget_neard_p.cpp  qnearfieldtarget_neard_p.h
Qt/6.10.0/Src/qtdeclarative/src/plugins/: CMakeLists.txt
Qt/6.10.0/Src/qtdoc/doc/: CMakeLists.txt
Qt/6.10.0/Src/qtdoc/doc/config/: qtdoc.qdocconf
Qt/6.10.0/Src/qtdoc/doc/src/: classes.qdoc  configure.qdoc  core.qdoc  external-resources.qdoc  extras-changes.qdoc  graphics.qdoc  graphics2d.qdoc  index.qdoc  language-overview.qdoc  overviews.qdoc  porting-qt3d-to-qtquick3d.qdoc  porting.qdoc  product-information.qdoc  qt-additional-modules.qdoc  qt-intro.qdoc  qt-tools-utilities.qdoc  qtdoc-toc.qdoc  qtmodules.qdoc  releases.qdoc  signalslotsyntaxes.qdoc  topics.qdoc  userinterfaces.qdoc  wayland-and-qt.qdoc
Qt/6.10.0/Src/qtlottie/src/: CMakeLists.txt
Qt/6.10.0/Src/qtlottie/src/lottie/: CMakeLists.txt  qbeziereasing.cpp  qlottiebase.cpp  qlottiebase_p.h  qlottiebasictransform.cpp  qlottieellipse.cpp  qlottiefill.cpp  qlottiefill_p.h  qlottiefilleffect.cpp  qlottieflatlayers.cpp  qlottieflatlayers_p.h  qlottiefreeformshape.cpp  qlottiegfill.cpp  qlottiegfill_p.h  qlottiegroup.cpp  qlottiegroup_p.h  qlottieimage.cpp  qlottieimage_p.h  qlottielayer.cpp  qlottiepolystar.cpp  qlottiepolystar_p.h  qlottieprecomplayer.cpp  qlottieproperty_p.h  qlottierect.cpp  qlottierect_p.h  qlottierepeater.cpp  qlottierepeatertransform.cpp  qlottierepeatertransform_p.h  qlottieroot.cpp  qlottieround.cpp  qlottieround_p.h  qlottieshape.cpp  qlottieshape_p.h  qlottieshapelayer.cpp  qlottieshapetransform.cpp  qlottiestroke.cpp  qlottiestroke_p.h  qlottietrimpath.cpp  qlottietrimpath_p.h
Qt/6.10.0/Src/qtlottie/src/lottiegenerator/: CMakeLists.txt  (+2 more)
Qt/6.10.0/Src/qtscxml/src/: CMakeLists.txt
Qt/6.10.0/Src/qtsvg/: .gitreview  .tag  CMakeLists.txt  REUSE.toml  licenseRule.json
Qt/6.10.0/Src/qtsvg/coin/: module_config.yaml
Qt/6.10.0/Src/qtsvg/examples/: CMakeLists.txt
Qt/6.10.0/Src/qtsvg/src/: CMakeLists.txt
(+57339 files in other folders)
