[metadata]
# name of the package, i.e. what is installed with pip
name = pyrit
author = Quince group
description = A finite element solver for Maxwell's equations and heat flow in two and three dimensions.
long_description = file: README.md
url = https://git.rwth-aachen.de/jonas.bundschuh/pyrit
# short description of the licence
licence = AGPLv3
# The licence file
licence_file = LICENCE

[options]
packages = find:
package_dir =
    =source
# all packages without which pyrit cannot run
install_requires =
    gmsh>=4.10.5,<4.12
    sympy>=1.8
    scipy>=1.7
    pyyaml>=5.4
    matplotlib>=3.4
    numba>=0.54
    numpy>=1.20,<2.0
    colorama>=0.4.4
    pandas>=2.0.0
    pypardiso>=0.4.1
    pyvista>=0.38

python_requires = >=3.8

[options.packages.find]
where = source

[options.extras_require]
# these packages are only required for developers
dev =   pytest==7.1.2
        pylint==2.14.4
        flake8==4.0.1
        flake8-docstrings==1.6.0
        Sphinx==5.0.2
        sphinx-rtd-theme==1.0.0
        sphinxcontrib-applehelp==1.0.2
        sphinxcontrib-devhelp==1.0.2
        sphinxcontrib-htmlhelp==2.0.0
        sphinxcontrib-jsmath==1.0.1
        sphinxcontrib-qthelp==1.0.3
        sphinxcontrib-serializinghtml==1.1.5
        pycodestyle==2.8.0
        pydocstyle==6.1.1
        alabaster==0.7.12
        coverage==6.4.1
        jupyter