# Copyright (C) 2022 The Qt Company Ltd.
# SPDX-License-Identifier: BSD-3-Clause

# special case skip regeneration

add_library(QtDoc INTERFACE)

qt_internal_add_docs(QtDoc config/qtdoc.qdocconf
    DEFINES
        QT_SUPPORTED_MIN_MACOS_SDK_VERSION=${QT_SUPPORTED_MIN_MACOS_SDK_VERSION}
        QT_SUPPORTED_MIN_MACOS_XCODE_VERSION=${QT_SUPPORTED_MIN_MACOS_XCODE_VERSION}
        QT_SUPPORTED_MIN_MACOS_VERSION=${QT_SUPPORTED_MIN_MACOS_VERSION}
        QT_SUPPORTED_MAX_MACOS_VERSION_TESTED=${QT_SUPPORTED_MAX_MACOS_VERSION_TESTED}

        QT_SUPPORTED_MIN_IOS_SDK_VERSION=${QT_SUPPORTED_MIN_IOS_SDK_VERSION}
        QT_SUPPORTED_MIN_IOS_XCODE_VERSION=${QT_SUPPORTED_MIN_IOS_XCODE_VERSION}
        QT_SUPPORTED_MIN_IOS_VERSION=${QT_SUPPORTED_MIN_IOS_VERSION}
        QT_SUPPORTED_MAX_IOS_VERSION_TESTED=${QT_SUPPORTED_MAX_IOS_VERSION_TESTED}

        QT_SUPPORTED_MIN_VISIONOS_SDK_VERSION=${QT_SUPPORTED_MIN_VISIONOS_SDK_VERSION}
        QT_SUPPORTED_MIN_VISIONOS_XCODE_VERSION=${QT_SUPPORTED_MIN_VISIONOS_XCODE_VERSION}
        QT_SUPPORTED_MIN_VISIONOS_VERSION=${QT_SUPPORTED_MIN_VISIONOS_VERSION}
        QT_SUPPORTED_MAX_VISIONOS_VERSION_TESTED=${QT_SUPPORTED_MAX_VISIONOS_VERSION_TESTED}
)
